Sun Oct  9 13:17:37 USMST 2005  Yan Dai  <dai_y@ociweb.com>

        * DevGuideExamples/DDS/Messenger/publisher.cpp:
        * DevGuideExamples/DDS/Messenger/subscriber.cpp:
        * performance-tests/DCPS/SimpleE2ETest/common.h:
        * performance-tests/DCPS/SimpleE2ETest/publisher.cpp:
        * performance-tests/DCPS/SimpleE2ETest/subscriber.cpp:
        * performance-tests/DCPS/TCPListenerTest/DataReaderListener.h:
        * performance-tests/DCPS/UDPNoKeyTest/publisher.cpp:
        * performance-tests/DCPS/UDPNoKeyTest/subscriber.cpp:
        * tests/DCPS/BuiltInTopic/main.cpp:
        * tests/DCPS/DCPSInfoRepo/publisher.cpp:
        * tests/DCPS/DcpsIntegration/DomainParticipantListener.h:
        * tests/DCPS/DcpsIntegration/infrastructure.cpp:
        * tests/DCPS/DcpsIntegration/topic.cpp:
        * tests/DCPS/DcpsIntegration/TopicListener.h:
        * tests/DCPS/FooTest2/main.cpp:
        * tests/DCPS/FooTest3/main.cpp:
        * tests/DCPS/FooTest3_0/PubDriver.cpp:
        * tests/DCPS/FooTest3_1/PubDriver.cpp:
        * tests/DCPS/FooTest3_1/Writer.h:
        * tests/DCPS/FooTest3_2/PubDriver.cpp:
        * tests/DCPS/FooTest3NoKey/main.cpp:
        * tests/DCPS/FooTest4/main.cpp:
        * tests/DCPS/FooTest4/Reader.cpp:
        * tests/DCPS/FooTest4_0/main.cpp:
        * tests/DCPS/FooTest5/publisher.cpp:
        * tests/DCPS/FooTest5/subscriber.cpp:
        * tests/DCPS/FooTest5_0/main.cpp:
        * tests/DCPS/FooType/FooTypeSupportImpl.h:
        * tests/DCPS/LivelinessTest/publisher.cpp:
        * tests/DCPS/LivelinessTest/subscriber.cpp:
        * tests/DCPS/MultiTopicTest/publisher.cpp:
        * tests/DCPS/MultiTopicTest/subscriber.cpp:
        * tests/DCPS/SimpleFooTest/main.cpp:
        * tests/DCPS/unit/Main.cpp:
 
          Fixed memory leaks and some string problems caused by VC6's inability
          to pick the correct overloaded function.

Wed Oct  5 14:28:18 USMST 2005  Yan Dai  <dai_y@ociweb.com>
